--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-linear-gradient": "^9.1.0",
     "expo-localization": "~10.1.0",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.5.4",
     "i18n-js": "^3.8.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
