--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "5.0.12",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.1.0",
