--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "description": "React Native - Soft UI Kit - Free",
     "primaryColor": "#CB0C9F",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/mekyal.png",
