--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.27.2",
     "dayjs": "^1.10.5",
     "expo": "^41.0.1",
     "expo-app-loading": "^1.0.3",
@@ -41,6 +42,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "^0.16.3",
     "react-native-webview": "^11.2.3",
     "react-native-youtube-iframe": "^2.2.2",
