--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
     "i18n-js": "^3.8.0",
+    "native-base": "^3.4.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -42,7 +43,6 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "^0.16.3",
     "react-native-webview": "^11.2.3",
     "react-native-youtube-iframe": "^2.2.2",
