--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
     "i18n-js": "^3.8.0",
+    "ionicons": "^6.0.1",
     "native-base": "^3.4.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
